--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "jquery": "^3.1.1",
     "angular": "^1.6.0"
+  },
+  "dependencies": {
+    "angular-mocks": "^1.6.0"
   }
 }
