--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Angular Treeview",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc ./node_modules/.bin/ava -v",
+    "report-coverage": "nyc report --reporter=lcov > coverage.lcov && codecov",
+    "standard": "standard index.js"
   },
   "author": "Denimar de Moraes",
   "license": "ISC",
@@ -23,6 +25,17 @@
     "gulp-uglify": "^2.0.0",
     "gulp-webserver": "^0.9.1",
     "jshint": "^2.9.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "ava": "^0.16.0",
+    "co-exec": "^1.0",
+    "codecov": "^1.0.1",
+    "ghooks": "^1.2.4",
+    "nyc": "^10.0.0",
+    "standard": "^8.4.0"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run standard"
+    }
   }
 }
